# Angel

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-angel.ps1  setup-angel.sh
.github/workflows/: cd.yml  ci.yml  docs.yml
angel_cli/: __init__.py  __main__.py  cli.py
angel_cli/commands/: auth.py  config.py  maintenance.py  repos.py  tools.py
angel_cli/core/: __init__.py  auth.py  config.py  database.py  storage.py  utils.py
angel_cli/models/: __init__.py  audit.py  base.py  repository.py  tool.py  user.py
angel_cli/services/: __init__.py  backup_service.py  repo_service.py  search_service.py  tool_service.py
angel_web/: __init__.py  app.py
angel_web/api/routes/: auth.py  repos.py  search.py  system.py  tools.py
angel_web/api/schemas/: repository.py  tool.py  user.py
angel_web/static/css/: custom.css
angel_web/static/js/: alpine-components.js  app.js
angel_web/templates/: base.html  dashboard.html
docs/: api-reference.md  cli-reference.md  configuration.md  index.md  installation.md  quickstart.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: build_docs.sh  dev_setup.sh
tests/integration/: test_health.py
tests/unit/: test_auth.py
